--- a/shop.html
+++ b/shop.html
@@ -50,22 +50,22 @@
             <h1>CONOCE NUESTROS CAFÉS</h1>
             <a
             data-fancybox="gallery" data-src="img\GalCapuchinoBig.png" 
-            data-caption="Café Cappuccino.<br>Expreso, vapor y espuma de leche a partes iguales">
+            data-caption="Café Cappuccino.</br>Expreso, vapor y espuma de leche a partes iguales">
             <img src="img/Clicmobile.png" />
             </a>
-            <a data-fancybox="gallery" data-src="img\GalAmericano.png" 
+            <a data-fancybox="gallery" data-src="img/GalAmericano.png" 
             data-caption="Café Americano.<br>Sabor suave y ligero"> 
             </a>
-            <a data-fancybox="gallery" data-src="img\GalMocca.png" 
+            <a data-fancybox="gallery" data-src="img/GalMocca.png" 
             data-caption="Café Moca.<br>Con leche vaporizada y chocolate"> 
             </a>
-            <a data-fancybox="gallery" data-src="img\GalLate.png" 
+            <a data-fancybox="gallery" data-src="img/GalLate.png" 
             data-caption="Café Latte.<br>Espuma suave y sedosa"> 
             </a>
-            <a data-fancybox="gallery" data-src="img\GalExpress.png" 
+            <a data-fancybox="gallery" data-src="img/GalExpress.png" 
             data-caption="Café Expresso.<br>30 ml de puro placer gustativo"> 
             </a>
-            <a data-fancybox="gallery" data-src="img\GalLeche.png" 
+            <a data-fancybox="gallery" data-src="img/GalLeche.png" 
             data-caption="Café con leche.<br>Café negro concentrado mezclado con leche caliente"> 
             </a>
     </div>
