--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,7 @@
         <div class="cafes" title="Abrir galería">
             <h1>CONOCE NUESTROS CAFÉS</h1>
             <a
-            data-fancybox="gallery" data-src="img\GalCapuchinoBig.png" 
+            data-fancybox="gallery" data-src="img/GalCapuchinoBig.png" 
             data-caption="Café Cappuccino.</br>Expreso, vapor y espuma de leche a partes iguales">
             <img src="img/Clicmobile.png" />
             </a>
