--- a/acerca.html
+++ b/acerca.html
@@ -7,7 +7,7 @@
     <title>Acerca de TOMA CAFÉ</title>
     <link rel="shortcut icon" href="img/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 mt-4 pt-2">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="/img/template241x362.png" class="img-fluid" alt="GranosDeCafé" title="Granos de Café"/>
+                                    <img src="img/template241x362.png" class="img-fluid" alt="GranosDeCafé" title="Granos de Café"/>
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
@@ -62,13 +62,13 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="/img/template337x450.png" class="img-fluid" alt="SujetaCafé" title="Hola Mundo!"/>
+                                    <img src="img/template337x450.png" class="img-fluid" alt="SujetaCafé" title="Hola Mundo!"/>
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
                             <div class="col-lg-12 col-md-12 mt-4 pt-2">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="/img/template600x401.png" class="img-fluid" alt="Escritorio con taza" title="Trabaja con un café" />
+                                    <img src="img/template600x401.png" class="img-fluid" alt="Escritorio con taza" title="Trabaja con un café" />
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
