--- a/acerca.html
+++ b/acerca.html
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 mt-4 pt-2">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="img/template241x362.png" class="img-fluid" alt="GranosDeCafé" title="Granos de Café"/>
+                                    <img src="./img/template241x362.png" class="img-fluid" alt="GranosDeCafé" title="Granos de Café"/>
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
@@ -62,13 +62,13 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="img/template337x450.png" class="img-fluid" alt="SujetaCafé" title="Hola Mundo!"/>
+                                    <img src="./img/template337x450.png" class="img-fluid" alt="SujetaCafé" title="Hola Mundo!"/>
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
                             <div class="col-lg-12 col-md-12 mt-4 pt-2">
                                 <div class="card work-desk rounded border-0 shadow-lg overflow-hidden">
-                                    <img src="img/template600x401.png" class="img-fluid" alt="Escritorio con taza" title="Trabaja con un café" />
+                                    <img src="./img/template600x401.png" class="img-fluid" alt="Escritorio con taza" title="Trabaja con un café" />
                                     <div class="img-overlay bg-dark"></div>
                                 </div>
                             </div>
